@@ -44,6 +44,10 @@
 <ulink url="&downloadable-file;images/kirkwood/netboot/marvell/">.../images/kirkwood/netboot/marvell/</ulink>
   '>
 
+  <!ENTITY lacie-kirkwood-firmware-img '
+<ulink url="&downloadable-file;images/kirkwood/network-console/lacie/">.../images/kirkwood/network-console/lacie/</ulink>
+  '>
+
 <!--  -->
 <!--  tftp disk images: proper -->
 <!--  -->
