@@ -50,8 +50,10 @@ CPU, Ethernet, SATA, USB, and other functionality in one chip.  We
 currently support the following Kirkwood based devices: OpenRD
 (OpenRD-Base, OpenRD-Client and OpenRD-Ultimate), <ulink
 url="&url-arm-cyrius-sheevaplug;">plug computers (SheevaPlug, GuruPlug and
-DreamPlug)</ulink>, and <ulink url="&url-arm-cyrius-qnap-kirkwood;">QNAP
-Turbo Station</ulink> (all TS-11x, TS-21x and TS-41x models).
+DreamPlug)</ulink>, <ulink url="&url-arm-cyrius-qnap-kirkwood;">QNAP
+Turbo Station</ulink> (all TS-11x, TS-21x and TS-41x models), and LaCie
+NASes (Network Space v2, Network Space Max v2, Internet Space v2, d2
+Network v2, 2Big Network v2 and 5Big Network v2).
 
 </para></listitem>
 </varlistentry>
