@@ -72,3 +72,15 @@ these files from &kirkwood-marvell-firmware-img;.
 </para>
    </sect3>
 
+   <sect3 arch="arm" id="lacie-install-files">
+   <title>LaCie NASes Installation Files</title>
+<para>
+
+The installation files for LaCie NASes (Network Space v2, Network Space Max v2,
+Internet Space v2, d2 Network v2, 2Big Network v2 and 5Big Network v2) consist
+of a kernel and initrd for U-Boot.  You can obtain these files from
+&lacie-kirkwood-firmware-img;.
+
+</para>
+   </sect3>
+
