@@ -1,5 +1,6 @@
 installation-guide (20120827) UNRELEASED; urgency=low
 
+  [ Samuel Thibault ]
   * debian/rules: Fix suite name.
   * preseed: Add authorized_keys url preseed example, thanks Charles Plessy
     for the patch. Closes: #684629.
@@ -7,6 +8,9 @@ installation-guide (20120827) UNRELEASED; urgency=low
     Owlett for the heads-up. Closes: #280348, #309568.
   * Add language-parallel build support.
   * Update figures.
+
+  [ Simon Guinot ]
+  * Document support for LaCie NASes. Closes: #686128
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200
 
